egress/tls-wildcard/serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api.tlp.tencent.com
spec:
  hosts:
  - api.tlp.tencent.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
